syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message ClientBeta {
    message PKey {
        
        ExpiryKey sec_key = 10;
        SpdrKeyType sec_type = 11;
        string client_firm = 12; // client firm of the uploading user
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    float beta = 100; // client supplied beta (expected move of secKey relative to reference)
    string modified_by = 103; // user who last modified this record
    SysEnvironment modified_in = 106;
    google.protobuf.Timestamp timestamp = 109; // timestamp of last modification
}


